--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,6 @@
 name: Build
 
-on:
-  push:
-    branches:
-      - master
+on: push
 
 jobs:
   build:
@@ -11,10 +8,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
 
-    - name: Create zip file
-      run: make zip
+      - name: Validate using XSDs
+        uses: klakegg/xsdchecker@master
+        with:
+          script: xc --xsd-1.0 **/*.xsd
 
-    - name: Build validation artifact
-      run: make validator
+      - name: Create zip file
+        run: make zip
+
+      - name: Build validation artifact
+        run: make validator
+
+      - name: Upload XSD package
+        uses: klakegg/github-upload@v0.9.1
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          file: "schemas.zip"
+          name: "ehf-schemas-${TAG}.zip"
+          label: "Package containing XSD files (zip)"
+
+      - name: Upload validation artifact
+        uses: klakegg/github-upload@v0.9.1
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          file: "target/no.anskaffelser.ehf.schemas-${TAG}.asice"
+          label: "Validation artifacts for VEFA Validator 2.x"
+          type: "application/vnd.difi.validator.v2+zip"
